force-app/main/default/objects/B2B_Lens_Configurator__c/B2B_Lens_Configurator__c.object-meta.xml
<CustomObject>
    <description>This Object is used to save the configuration at every step of the configurator from VS/RX</description>
    <label>B2B Lens Configurator</label>
    <nameField>
        <displayFormat>LC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Lens Configurator</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>