force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_a__c.field-meta.xml
<CustomField>
    <fullName>B2B_a__c</fullName>
    <description>Symetrically on x-axis (-9 to 9)</description>
    <label>a</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>