force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Accent_Ring__c.field-meta.xml
<CustomField>
    <fullName>B2B_Accent_Ring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is it with Accent Ring?</description>
    <label>with Accent Ring</label>
    <type>Checkbox</type>
</CustomField>