force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Account__c.field-meta.xml
<CustomField>
    <fullName>B2B_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account associated with VS RX configuration</description>
    <label>Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>B2B Lens Configurator</relationshipLabel>
    <relationshipName>B2B_Lens_Configurator</relationshipName>
    <type>Lookup</type>
</CustomField>