force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Agreement_To_Adapter__c.field-meta.xml
<CustomField>
    <fullName>B2B_Agreement_To_Adapter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It is used to store agreement value which is shown on the centering data page when the user selects the adapter</description>
    <label>Agreement To Adapter</label>
    <type>Checkbox</type>
</CustomField>