force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Agreement_To_Direct_Glazing__c.field-meta.xml
<CustomField>
    <fullName>B2B_Agreement_To_Direct_Glazing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It is used to store agreement value which is shown on the centering data page when the user selects directing glazing</description>
    <label>Agreement To Direct Glazing</label>
    <type>Checkbox</type>
</CustomField>