force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_allowedScaling__c.field-meta.xml
<CustomField>
    <fullName>B2B_allowedScaling__c</fullName>
    <label>allowedScaling</label>
    <length>24000</length>
    <type>LongTextArea</type>
</CustomField>