force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Antireflection_Product__c.field-meta.xml
<CustomField>
    <fullName>B2B_Antireflection_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to stamp the Antireflection product.</description>
    <label>Antireflection Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>B2B Lens Configurator</relationshipLabel>
    <relationshipName>B2B_Lens_Configurator_antireflection</relationshipName>
    <type>Lookup</type>
</CustomField>