force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Antireflection_SKU__c.field-meta.xml
<CustomField>
    <fullName>B2B_Antireflection_SKU__c</fullName>
    <label>Antireflection SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>