force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_ARIS_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>B2B_ARIS_Account_Id__c</fullName>
    <description>This field is used to store ARIS ID of currently mapped account and it is needed for Schneider callout for retailderId attribute</description>
    <label>ARIS_Account_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>