force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Axis_Min_Left_Lens_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>B2B_Axis_Min_Left_Lens_Adjusted__c</fullName>
    <description>This field is used to store value of Axis Minimum of left lens adjusted obtained from Schneider callout</description>
    <label>Axis Min Left Lens Adjusted</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>