force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Axis_Min_Right_Lens__c.field-meta.xml
<CustomField>
    <fullName>B2B_Axis_Min_Right_Lens__c</fullName>
    <description>This field is used to store value of Axis Minimum of right lens obtained from Schneider callout</description>
    <label>Axis Min Right Lens</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>