force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Axis_Right__c.field-meta.xml
<CustomField>
    <fullName>B2B_Axis_Right__c</fullName>
    <label>Axis - Right Eye</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>