force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_b1__c.field-meta.xml
<CustomField>
    <fullName>B2B_b1__c</fullName>
    <description>Asymmetrically in y-axis up (-9 to 9)</description>
    <label>b1</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>