force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_b2__c.field-meta.xml
<CustomField>
    <fullName>B2B_b2__c</fullName>
    <description>Asymmetrically in y-axis down (-9 to 9)</description>
    <label>b2</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>