force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Base_Curve__c.field-meta.xml
<CustomField>
    <fullName>B2B_Base_Curve__c</fullName>
    <description>This field is used to store base curve of frame product</description>
    <label>Base Curve</label>
    <length>255</length>
    <type>Text</type>
</CustomField>