force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Base_Values__c.field-meta.xml
<CustomField>
    <fullName>B2B_Base_Values__c</fullName>
    <label>Base Values</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Prism</fullName>
            </value>
            <value>
                <fullName>In Degrees</fullName>
            </value>
            <value>
                <fullName>Horizontal / Vertical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>