force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_BlankCoatingSKU__c.field-meta.xml
<CustomField>
    <fullName>B2B_BlankCoatingSKU__c</fullName>
    <description>This field will hold schnieder sku for blank coating</description>
    <label>BlankCoatingSKU</label>
    <length>30</length>
    <type>Text</type>
</CustomField>