force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_blp__c.field-meta.xml
<CustomField>
    <fullName>B2B_blp__c</fullName>
    <label>blp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>