force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Blue_Sensation__c.field-meta.xml
<CustomField>
    <fullName>B2B_Blue_Sensation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will store value of blue sensation product related to lens product.</description>
    <label>Blue Sensation</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>B2B Lens Configurator (Blue Sensation)</relationshipLabel>
    <relationshipName>B2B_Lens_Configurator2</relationshipName>
    <type>Lookup</type>
</CustomField>