force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_BVD_worn__c.field-meta.xml
<CustomField>
    <fullName>B2B_BVD_worn__c</fullName>
    <label>BVD worn</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>