force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Cart_Item__c.field-meta.xml
<CustomField>
    <fullName>B2B_Cart_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B2B Cart Item</label>
    <referenceTo>CartItem</referenceTo>
    <relationshipLabel>B2B Lens Configurator</relationshipLabel>
    <relationshipName>B2B_Lens_Configurator</relationshipName>
    <type>Lookup</type>
</CustomField>