force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Center_Thickness_Right_Lens_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>B2B_Center_Thickness_Right_Lens_Adjusted__c</fullName>
    <description>This field is used to store value of Lens thickness at center of right lens adjusted obtained from Schneider callout</description>
    <label>Center Thickness Right Lens Adjusted</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>