force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Clerk__c.field-meta.xml
<CustomField>
    <fullName>B2B_Clerk__c</fullName>
    <description>Value Entered by user in Clerk box on UI during VS/RX setup</description>
    <label>Clerk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>