force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Color_Number__c.field-meta.xml
<CustomField>
    <fullName>B2B_Color_Number__c</fullName>
    <description>This field is used to store color of selected frame and is used in Schneider callout for attribute: &apos;colorNumber&apos;</description>
    <label>Color Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>