force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>B2B_Customer_Name__c</fullName>
    <description>Name entered by customer on UI during VS/RX Setup</description>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>