force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Customer_Service_Consent__c.field-meta.xml
<CustomField>
    <fullName>B2B_Customer_Service_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Service Consent</label>
    <type>Checkbox</type>
</CustomField>