force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_DHP__c.field-meta.xml
<CustomField>
    <fullName>B2B_DHP__c</fullName>
    <description>Move nasal drills (-2 to 2)</description>
    <label>DHP</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>