force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Drills__c.field-meta.xml
<CustomField>
    <fullName>B2B_Drills__c</fullName>
    <description>This field is used to store &apos;Drills&apos; obtained from &apos;OMA&apos; callout</description>
    <label>Drills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>