force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_EE_Size__c.field-meta.xml
<CustomField>
    <fullName>B2B_EE_Size__c</fullName>
    <description>This field is used to store the Product Size.</description>
    <label>eeSize</label>
    <length>255</length>
    <type>Text</type>
</CustomField>