force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Evil_Eye_Edge__c.field-meta.xml
<CustomField>
    <fullName>B2B_Evil_Eye_Edge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Evil Eye Edge</label>
    <type>Checkbox</type>
</CustomField>