force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Eye_Side__c.field-meta.xml
<CustomField>
    <fullName>B2B_Eye_Side__c</fullName>
    <label>Eye Side</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>right and left lens side</fullName>
            </value>
            <value>
                <fullName>Right lens</fullName>
            </value>
            <value>
                <fullName>Left lens</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>