force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Features__c.field-meta.xml
<CustomField>
    <fullName>B2B_Features__c</fullName>
    <description>Schneider call parameter features will be mapped to this field</description>
    <label>Features</label>
    <length>255</length>
    <type>Text</type>
</CustomField>