force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Final_PreCalcGuid__c.field-meta.xml
<CustomField>
    <fullName>B2B_Final_PreCalcGuid__c</fullName>
    <description>This field will store the PreCalcGuid from lens calculation response.</description>
    <label>PreCalculation GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>