force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Frame_Collection__c.field-meta.xml
<CustomField>
    <fullName>B2B_Frame_Collection__c</fullName>
    <label>Frame Collection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Infinity View</fullName>
            </value>
            <value>
                <fullName>Minimal X</fullName>
            </value>
            <value>
                <fullName>SPX Modern Art</fullName>
            </value>
            <value>
                <fullName>SPX light</fullName>
            </value>
            <value>
                <fullName>Vivid Sky FR</fullName>
            </value>
            <value>
                <fullName>Crystal Diva</fullName>
            </value>
            <value>
                <fullName>Mario</fullName>
            </value>
            <value>
                <fullName>Greta</fullName>
            </value>
            <value>
                <fullName>Bill</fullName>
            </value>
            <value>
                <fullName>David</fullName>
            </value>
            <value>
                <fullName>Erin</fullName>
            </value>
            <value>
                <fullName>Anna</fullName>
            </value>
            <value>
                <fullName>Phil</fullName>
            </value>
            <value>
                <fullName>Betty</fullName>
            </value>
            <value>
                <fullName>Gabriel</fullName>
            </value>
            <value>
                <fullName>Nik</fullName>
            </value>
            <value>
                <fullName>Laura</fullName>
            </value>
            <value>
                <fullName>Herbert</fullName>
            </value>
            <value>
                <fullName>Anton</fullName>
            </value>
            <value>
                <fullName>OTTO</fullName>
            </value>
            <value>
                <fullName>JÖRG</fullName>
            </value>
            <value>
                <fullName>TOBI</fullName>
            </value>
            <value>
                <fullName>Paula</fullName>
            </value>
            <value>
                <fullName>Finn</fullName>
            </value>
            <value>
                <fullName>Erik</fullName>
            </value>
            <value>
                <fullName>Kate</fullName>
            </value>
            <value>
                <fullName>John</fullName>
            </value>
            <value>
                <fullName>Jack</fullName>
            </value>
            <value>
                <fullName>Maxime</fullName>
            </value>
            <value>
                <fullName>Ella</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>