force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Frame_Color_Description__c.field-meta.xml
<CustomField>
    <fullName>B2B_Frame_Color_Description__c</fullName>
    <description>This field is used to store the frame color description of the product.</description>
    <label>Frame Color Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>