force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Frame_Type__c.field-meta.xml
<CustomField>
    <fullName>B2B_Frame_Type__c</fullName>
    <description>Frame type selected by the user</description>
    <label>Frame Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Optical Eyewear</fullName>
            </value>
            <value>
                <fullName>Sunglasses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>