force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_GlassProductSKU__c.field-meta.xml
<CustomField>
    <fullName>B2B_GlassProductSKU__c</fullName>
    <description>This field will store schnieder sku for glass product</description>
    <label>GlassProductSKU</label>
    <length>30</length>
    <type>Text</type>
</CustomField>