force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Hard_Coating_Product__c.field-meta.xml
<CustomField>
    <fullName>B2B_Hard_Coating_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to stamp the Hard Coating product.</description>
    <label>Hard Coating Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>B2B Lens Configurator (Hard Coating Product)</relationshipLabel>
    <relationshipName>B2B_Lens_Configurator_hard_coating</relationshipName>
    <type>Lookup</type>
</CustomField>