force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Hard_Coating_SKU__c.field-meta.xml
<CustomField>
    <fullName>B2B_Hard_Coating_SKU__c</fullName>
    <description>This field is used to store Hard Coating SKU selected by user during VS-RX Configuration</description>
    <label>Hard Coating SKU</label>
    <length>55</length>
    <type>Text</type>
</CustomField>