force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_hasDrills__c.field-meta.xml
<CustomField>
    <fullName>B2B_hasDrills__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to store the &apos;hasDrills&apos; obtained from OMA calout</description>
    <label>hasDrills</label>
    <type>Checkbox</type>
</CustomField>