force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Last_Completed_Step__c.field-meta.xml
<CustomField>
    <fullName>B2B_Last_Completed_Step__c</fullName>
    <description>This field will hold the step number of last saved/completed steps of vs/rx configuration.</description>
    <label>Last Completed Step</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>