force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Left_Lens_Image_SRC__c.field-meta.xml
<CustomField>
    <fullName>B2B_Left_Lens_Image_SRC__c</fullName>
    <description>This field is used to store value for left image SRC obtained from Schneider callout</description>
    <label>Left Lens Image SRC</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>