force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Lens_Color__c.field-meta.xml
<CustomField>
    <fullName>B2B_Lens_Color__c</fullName>
    <description>This will store the lens color of lens product</description>
    <label>Lens Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>