force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Lens_Color_Id__c.field-meta.xml
<CustomField>
    <fullName>B2B_Lens_Color_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will store selected lens color product for VS.</description>
    <label>Lens Color Id</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>B2B Lens Configurator</relationshipLabel>
    <relationshipName>B2B_Lens_Configurator_Lens_Color</relationshipName>
    <type>Lookup</type>
</CustomField>