force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Lens_Edge__c.field-meta.xml
<CustomField>
    <fullName>B2B_Lens_Edge__c</fullName>
    <label>Lens Edge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>semi-matte</fullName>
            </value>
            <value>
                <fullName>Polished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>