force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Lens_Index__c.field-meta.xml
<CustomField>
    <fullName>B2B_Lens_Index__c</fullName>
    <description>lens Index</description>
    <label>Lens Index</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1,67</fullName>
            </value>
            <value>
                <fullName>1,59</fullName>
            </value>
            <value>
                <fullName>1,60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>