force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Lens_Picture_Link__c.field-meta.xml
<CustomField>
    <fullName>B2B_Lens_Picture_Link__c</fullName>
    <description>This will store the product image for lens product</description>
    <label>Lens Picture Link</label>
    <length>100</length>
    <type>Text</type>
</CustomField>