force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Lens_Shape__c.field-meta.xml
<CustomField>
    <fullName>B2B_Lens_Shape__c</fullName>
    <label>Lens Shape</label>
    <length>255</length>
    <type>Text</type>
</CustomField>