force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Lens_Size__c.field-meta.xml
<CustomField>
    <fullName>B2B_Lens_Size__c</fullName>
    <label>Lens Size</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>