force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Lens_Type__c.field-meta.xml
<CustomField>
    <fullName>B2B_Lens_Type__c</fullName>
    <description>Types of lenses available</description>
    <label>Lens Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Panorama Single Vision</fullName>
            </value>
            <value>
                <fullName>Panorama Progressive</fullName>
            </value>
            <value>
                <fullName>Panorama Progressiv ONE</fullName>
                <label>Panorama Progressive ONE</label>
            </value>
            <value>
                <fullName>Panorama Office Room / Desk</fullName>
            </value>
            <value>
                <fullName>Panorama Relax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>