force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_Lenses_without_Adapter__c.field-meta.xml
<CustomField>
    <fullName>B2B_Lenses_without_Adapter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be set to true if user selects checkbox when order type is Lens only and RX solution it Adapter.</description>
    <label>Lenses without Adapter</label>
    <type>Checkbox</type>
</CustomField>