force-app/main/default/objects/B2B_Lens_Configurator__c/fields/B2B_LensHandling_SKU__c.field-meta.xml
<CustomField>
    <fullName>B2B_LensHandling_SKU__c</fullName>
    <description>This will store lens handling SKU</description>
    <label>Lens Handling SKU</label>
    <length>20</length>
    <type>Text</type>
</CustomField>